# ZKT

./: .gitignore  BUGS  CHANGELOG  Makefile  Makefile.in  README  README.logging  README.md  TODO  config.h  config.h.in  configure  configure.ac  debug.h  dki.c  dki.h  dnssec-signer.8  dnssec-signer.c  dnssec-soaserial.c  dnssec-zkt.8  dnssec-zkt.c  dnssec.conf  domaincmp.c  domaincmp.h  log.c  log.h  misc.c  misc.h  ncparse.c  ncparse.h  nscomm.c  nscomm.h  rollover.c  rollover.h  soaserial.c  strlist.c  strlist.h  tags  zconf.c  zconf.h  (+13 more)
examples/: dnssec-signer.sh
examples/flat/: dnssec-zkt  dnssec.conf  keyset-example.net.  keyset-sub.example.net.  named.conf  zone.conf
examples/hierarchical/: dnssec-signer  dnssec-zkt  dnssec.conf
examples/views/: dnssec-extern.conf  dnssec-intern.conf  dnssec-signer-intern  dnssec-zkt-intern
zkt-delegate/: Makefile.in  config.h.in  configure  configure.ac  misc.c  misc.h  nsrrlist.c  nsrrlist.h  readkeyfile.c  readkeyfile.h  tags  update.c  update.h  zkt-delegate  zkt-delegate.c  zkt-dspicker.c
zonedir/: named.conf
zonedir/example.net/: Kexample.net.+001+38487.depreciated  Kexample.net.+001+38487.key  Kexample.net.+001+52804.key  Kexample.net.+001+52804.private  Kexample.net.+003+08333.key  Kexample.net.+003+08333.private  dlvset-example.net.  dnskey.db  dsset-example.net.  zone.db  (+4 more)
zonedir/example.net./: Kexample.net.+001+15532.key  Kexample.net.+001+15532.private  Kexample.net.+001+37167.key  Kexample.net.+001+37167.published  Kexample.net.+003+51141.key  dnskey.db  dsset-example.net.  zone.db  zone.db.signed
(+175 files in other folders)
